--- a/my-first-react-app/src/index.css
+++ b/my-first-react-app/src/index.css
@@ -755,9 +755,20 @@ body{
 
 .galleryContainer{
     display: flex;
+    position: relative;
     flex-direction: column;
-    padding: 0px 100px;
+    padding: 0px 100px 200px 100px;
     gap: 28px;
+}
+.galleryContainer::after{
+    content: '';
+    height: 1px;
+    width: 100%;
+    margin-bottom: 100px;
+    bottom: 0;
+    left: 0;
+    position: absolute;
+    background: linear-gradient(to right, #ffffff00, #CACACA, #ffffff00);
 }
 .galleryTitle{
     font-size: 56px;
@@ -769,7 +780,7 @@ body{
     display: grid;
     gap: 30px;
     grid-template-columns: 1fr 1fr 356px;
-    grid-template-rows: 238px 238px 568px;
+    grid-template-rows: 238px 238px 375px;
 }
 .galleryBig{
     grid-column: 1/3;
@@ -833,6 +844,174 @@ body{
     will-change: transform;
     transition: all 0.25s;
 }
+
+.testimoniesTitle{
+    display: none;
+}
+.testimoniesContainer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 0px 100px 115px 100px;
+    gap: 65px;
+    width: 100%;
+}
+.allTestimonies{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    width: 100%;
+}
+.testimony{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    opacity: 0;
+    display: none;
+    gap: 65px;
+}
+.testimoniesDotsContainer{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 20px;
+}
+.testimonyDot{
+    height: 8px;
+    width: 8px;
+    background-color: #CACACA;
+    border-radius: 50%;
+    transition: all 0.1s;
+    cursor: pointer;
+}
+.testimonyDot:hover {
+    background-color: #F7A524;
+}
+.activeTestimonyDot{
+    background-color: black;
+}
+.testimonytextDot{
+    height: 8px;
+    width: 8px;
+    border-radius: 50%;
+    background-color: #F7A524;
+}
+.testimonyText{
+    position: relative;
+    display: flex;
+    max-width: 657px;
+    flex-direction: column;
+}
+.testimonyQuote{
+    width: clamp(95px, 8vw, 113px);
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 0;
+    transform: translateX(-32px) translateY(-55px);
+}
+.testimonyTitle{
+    font-weight: 500;
+    font-family: 'ER_Garamond_Medium';
+    font-size: clamp(30px, 3vw ,48px);
+    max-width: 658px;
+    min-width: 400px;
+    line-height: 120%;
+    z-index: 100;
+}
+.testimonyNameContainer{
+    margin-top: 28px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 14px;
+}
+.testimonyName{
+    font-size: clamp(15px, 1.5vw ,18px);
+    font-family: 'DM_Sans_SemiBold';
+}
+.testimoNline{
+    background: linear-gradient(to right, #ffffff00, #CACACA, #ffffff00);
+    height: 1px;
+    margin-top: 20px;
+    width: 100%;
+}
+.testimonySuccesses{
+    font-size: clamp(15px, 1.5vw, 18px);
+    line-height: 170%;
+    margin-top: 20px;
+    color: #151515;
+    font-weight: 500;
+    font-family: 'DM_Sans_Regular';
+}
+.testimonyimage{
+    max-width: 645px;
+    max-height: 592px;
+    min-width: 420px;
+    min-height: 380px;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+.testimonyimage:hover img{
+    scale: 1.02;
+}
+.testimonyimage img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+    transition: all 0.2s;
+}
+
+.showTestimony{
+    display: flex;
+    animation-name: showTestimony;
+    animation-duration: 0.5s;
+    animation-timing-function: ease-out;
+    animation-fill-mode: forwards;
+    animation-iteration-count: 1;
+    opacity: 1;
+}
+@keyframes showTestimony {
+    0%{
+        opacity: 0;
+        z-index: 1;
+    }
+    100%{
+        opacity: 1;
+        z-index: 100;
+
+    }
+}
+
+.hideTestimony{
+    display: none;
+    animation-name: hideTestimony;
+    animation-duration: 0.5s;
+    animation-timing-function: ease-out;
+    animation-fill-mode: forwards;
+    animation-iteration-count: 1;
+    opacity: 1; 
+}
+@keyframes hideTestimony{
+    0%{
+        opacity: 1;
+        z-index: 100;
+    }
+    100%{
+        opacity: 0;
+        z-index: 1;
+
+    }
+}
+
+
+
 
 
 @media screen and (max-width: 1070px){
@@ -1031,7 +1210,7 @@ body{
 .galleryContainer{
     display: flex;
     flex-direction: column;
-    padding: 0px 70px;
+    padding: 0px 70px 200px 70px;
     gap: 28px;
 }
 .galleryGrid{
@@ -1081,6 +1260,74 @@ body{
     height: 100%;
     object-fit: cover;
 }
+
+
+.testimoniesContainer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 0px 70px 115px 70px;
+    gap: 65px;
+    width: 100%;
+}
+.testimonyText{
+    position: relative;
+    display: flex;
+    max-width: 600px;
+    flex-direction: column;
+}
+.testimonyQuote{
+    width: clamp(90px, 8vw, 100px);
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 0;
+    transform: translateX(-32px) translateY(-50px);
+}
+.testimonyTitle{
+    font-weight: 500;
+    font-family: 'ER_Garamond_Medium';
+    font-size: clamp(28px, 3vw ,48px);
+    max-width: 658px;
+    min-width: 300px;
+    line-height: 120%;
+    z-index: 100;
+}
+.testimonyNameContainer{
+    margin-top: 28px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 14px;
+}
+.testimonyName{
+    font-size: clamp(15px, 1.5vw ,18px);
+    font-family: 'DM_Sans_SemiBold';
+}
+.testimoNline{
+    display: none;
+}
+.testimonySuccesses{
+    font-size: clamp(15px, 1.5vw, 18px);
+    line-height: 170%;
+    margin-top: 20px;
+    color: #151515;
+    font-weight: 500;
+    font-family: 'DM_Sans_Regular';
+}
+.testimonyimage{
+    max-width: 600px;
+    max-height: 550px;
+    min-width: 380px;
+    min-height: 330px;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+
 
 }
 
@@ -1247,7 +1494,7 @@ body{
         transform: translateX(-20px) translateY(-50px);
     }
     .educationContainer{
-        padding: 0px 50px 120px 50px;
+        padding: 0px 50px 100px 50px;
         position: relative;
     }
     .educationImage{
@@ -1261,7 +1508,7 @@ body{
     }
 
     .historyContainer{
-        padding: 0px 50px 55px 50px;
+        padding: 0px 50px 100px 50px;
     }
     .historyTextOne{
         padding: 0px 5px;
@@ -1272,7 +1519,7 @@ body{
     }
 
     .galleryContainer{
-        padding: 0px 50px;
+        padding: 0px 50px 200px 50px;
         gap: 28px;
     }
 .galleryGrid{
@@ -1310,11 +1557,98 @@ body{
     padding-bottom: 20px;
     overflow: hidden;
 }
+
+.testimoniesContainer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 0px 50px 115px 50px;
+    gap: 65px;
+    width: 100%;
+}
+.allTestimonies{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    width: 100%;
+}
+.testimony{
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: start;
+    opacity: 0;
+    display: none;
+    width: 100%;
+    gap: 80px;
+}
+.showTestimony{
+    display: flex;
+}
+.testimonyText{
+    position: relative;
+    display: flex;
+    max-width: 600px;
+    flex-direction: column;
+}
+.testimonyQuote{
+    width: 85px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 0;
+    transform: translateX(-20px) translateY(-45px);
+}
+.testimonyTitle{
+    font-weight: 500;
+    font-family: 'ER_Garamond_Medium';
+    font-size: 36px;
+    max-width: 100%;
+    min-width: none;
+    line-height: 120%;
+    z-index: 100;
+}
+.testimonyNameContainer{
+    margin-top: 28px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 14px;
+}
+.testimonyName{
+    font-size: 17px;
+    font-family: 'DM_Sans_SemiBold';
+}
+.testimoNline{
+    display: none;
+}
+.testimonySuccesses{
+    font-size: 18px;
+    line-height: 170%;
+    margin-top: 20px;
+    color: #151515;
+    font-weight: 500;
+    font-family: 'DM_Sans_Regular';
+}
+.testimonyimage{
+    max-width: 100%;
+    min-height: 100%;
+    max-height: 600px;
+    min-width: 100%;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+
+
 }
 
 @media screen and (max-width: 700px){
     .galleryContainer{
-        padding: 0px 50px;
+        padding: 0px 50px 150px 50px;
         gap: 28px;
     }
 .galleryGrid{
@@ -1351,6 +1685,16 @@ body{
     height: 300px;
     padding-bottom: 20px;
     overflow: hidden;
+}
+.galleryContainer::after{
+    content: '';
+    height: 1px;
+    width: 100%;
+    margin-bottom: 80px;
+    bottom: 0;
+    left: 0;
+    position: absolute;
+    background: linear-gradient(to right, #ffffff00, #CACACA, #ffffff00);
 }
 }
 
@@ -1621,8 +1965,11 @@ body{
         font-size: 34px;
     }
     .galleryContainer{
-        padding: 0px 20px;
+        padding: 0px 20px 120px 20px;
         gap: 14px;
+    }
+    .galleryContainer::after{
+        margin-bottom: 60px;
     }
     .galleryGrid{
         width: 100%;
@@ -1659,6 +2006,99 @@ body{
         padding-bottom: 20px;
         overflow: hidden;
     }
+
+
+    .testimoniesContainer{
+    padding: 0px 20px 115px 20px;
+    gap: 50px;
+    width: 100%;
+}
+.testimoniesTitle{
+    display: flex;
+    font-size: 34px;
+    align-self: flex-start;
+    font-weight: 500;
+    font-family: "ER_Garamond_Medium";
+}
+.allTestimonies{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    width: 100%;
+    margin-top: -38px;
+}
+.testimony{
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: start;
+    opacity: 0;
+    display: none;
+    width: 100%;
+    gap: 80px;
+}
+.showTestimony{
+    display: flex;
+}
+.testimonyText{
+    position: relative;
+    padding: 0px 5px;
+    display: flex;
+    max-width: 600px;
+    flex-direction: column;
+}
+.testimonyQuote{
+    width: 68px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 0;
+    transform: translateX(-4px) translateY(-40px);
+}
+.testimonyTitle{
+    font-weight: 500;
+    font-family: 'ER_Garamond_Medium';
+    font-size: 28px;
+    max-width: 100%;
+    min-width: none;
+    line-height: 120%;
+    z-index: 100;
+}
+.testimonyNameContainer{
+    margin-top: 18px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 14px;
+}
+.testimonyName{
+    font-size: 14px;
+    font-family: 'DM_Sans_SemiBold';
+}
+.testimoNline{
+    display: none;
+}
+.testimonySuccesses{
+    font-size: 16px;
+    line-height: 170%;
+    margin-top: 18px;
+    color: #151515;
+    font-weight: 500;
+    font-family: 'DM_Sans_Regular';
+}
+.testimonyimage{
+    max-width: 100%;
+    min-height: 100%;
+    max-height: 600px;
+    min-width: 100%;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+
+
 }   
 
 
