--- a/my-first-react-app/src/index.css
+++ b/my-first-react-app/src/index.css
@@ -59,6 +59,34 @@ body{
 }
 
 
+
+.showSection{
+    animation-name: showSection;
+    animation-duration: 1.2s;
+    animation-iteration-count: 1;
+    animation-delay: 0.20s;
+    animation-fill-mode: forwards;
+}
+@keyframes showSection {
+    from{
+        opacity: 0;
+        transform: translateY(100px);
+    }
+    to{
+        opacity: 1;
+        transform: translateY(0px);
+    }
+}
+
+
+
+
+
+
+
+
+
+
 .menuContainer{
     z-index: 1000;
     top: 0;
@@ -304,6 +332,7 @@ body{
 }
 
 .communityContainer{
+    opacity: 0;
     display: flex;
     flex-direction: column;
     margin-top: 100px;
@@ -362,6 +391,7 @@ body{
 
 
 .principleContainer{
+    opacity: 0;
     margin-top: 80px;
     display: flex;
     flex-direction: row;
@@ -429,6 +459,7 @@ body{
 
 
 .educationContainer{
+    opacity: 0;
     width: 100%;
     margin-top: 65px;
     display: flex;
@@ -504,6 +535,7 @@ body{
 
 
 .clubsContainer{
+    opacity: 0;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -621,6 +653,7 @@ body{
 
 
 .historyContainer{
+    opacity: 0;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -753,6 +786,7 @@ body{
 }
 
 .galleryContainer{
+    opacity: 0;
     display: flex;
     position: relative;
     flex-direction: column;
@@ -848,6 +882,7 @@ body{
     display: none;
 }
 .testimoniesContainer{
+    opacity: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
