--- a/my-first-react-app/src/index.css
+++ b/my-first-react-app/src/index.css
@@ -37,6 +37,43 @@ body{
     overflow-x: hidden;
     position: relative;
 }
+.errorContainer{
+    width: 100vw;
+    height: 100dvh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 60px;
+}
+.error404{
+    font-size: 170px;
+    font-family: "DM_Sans_Medium";
+    font-weight: 500;
+    height: 170px;
+}
+.errorContent{
+    font-size: 32px;
+    font-family: "DM_Sans_Regular";
+    font-weight: 500;
+    color:#484848;
+}
+.errorLink{
+    text-decoration: underline;
+    cursor: pointer;
+    color: white;
+    background-color: #FFA314;
+    font-weight: 500;
+    font-size: 18px;
+    font-family: "DM_Sans_ExtraBold";
+    padding: 16px 44px;
+    border-radius: 100px;
+    transition: all 0.1s;
+}
+.errorLink:hover{
+    scale: 1.03;
+}
+
 .linkedin{
     color: #808080;
     position:inline;
@@ -48,6 +85,9 @@ body{
 }
 
 .appContainer{
+    opacity: 0;
+}
+.newsContainer{
     opacity: 0;
 }
 .appearDocument{
@@ -66,8 +106,6 @@ body{
 
     }
 }
-
-
 
 .showSection{
     animation-name: showSection;
@@ -1019,6 +1057,7 @@ body{
     flex-direction: column;
     padding: 226px 100px 80px 100px;
     width: 100%;
+    width: 100%;
     gap: 80px;
 }
 .footerBottom{
@@ -1037,6 +1076,9 @@ body{
     font-size: 16px;
     font-family: 'DM_Sans_Medium';
     color: #808080;
+}
+.copyright span{
+    font-size: 12px;
 }
 .footerSocialMedias{
     grid-column: 3/4;
@@ -1073,18 +1115,12 @@ body{
 }
 .gridFooterLinks{
     width: 100%;
-    display: flex;
-    gap: 100px;
-    flex-direction: row;
-    flex-wrap: wrap;
-}
-.footerGroup{
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
     gap: 80px;
-    flex-direction: row;
-    gap: auto;
 }
 .footerLinks{
+    border-right: 0.5px solid hsla(0, 0%, 34%, 0.3);
     display: flex;
     flex-direction: column;
     gap: 14px;
@@ -1098,7 +1134,7 @@ body{
 .secondaryLinks{
     display: flex;
     flex-direction: column;
-    gap: 8px;
+    gap: 12px;
 }
 .secondaryLink{
     font-size: 18px;
@@ -1110,13 +1146,185 @@ body{
 .secondaryLink:hover{
     color: white;
 }
-.footerLine{
+
+
+.newsTopContainer{
+    display: flex;
+    flex-direction: column;
+    margin-top: 100px;
+    padding: 65px 100px 120px 100px;
+    gap: 28px;
+}
+.newsTopTitle{
+    font-size: 56px;
+    font-weight: 500;
+    font-family: "ER_Garamond_Medium";
+}
+.mainNewsBigGrid{
+    display: grid;
+    width: 100%;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: auto auto auto auto;
+    gap: 30px;
+}
+.newsImage{
+    overflow: hidden;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.new{
+    cursor: pointer;
+}
+.new:hover img{
+    scale: 1.02;
+}
+.newsImage img{
+    will-change: transform;
+    transition: all 0.25s;
+    width: 100%;
     height: 100%;
-    width: 1px;
-    background: linear-gradient(to top, #ffffff00, rgba(202, 202, 202, 0.3), #ffffff00);
+    object-fit: cover;
+    object-position: center;
+}
+.news1 .newsImage{
+    max-height: 600px;
+}
+.news1{
+    padding-bottom: 30px;
+    grid-column: 1/4;
+    grid-row: 1/3;
+    border-right: 1px solid #CACACA;
+    border-bottom: 1px solid #CACACA;
+    padding-right: 30px;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+}
+.news1Content{
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    width: 80%;
+}
+.news1Title{
+    font-size: 50px;
+    font-family: 'ER_Garamond_Medium';
+    font-weight: 500;
+    line-height: 110%;
+}
+.news1Description{
+    font-size: 18px;
+    line-height: 170%;
+    width: 70%;
+    color: #484848;
+    font-family: 'DM_Sans_Regular';
+}
+.newsInlineInfo{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 16px;
+}
+.newsDate{
+    font-size: 15px;
+    color: #484848;
+    font-family: 'DM_Sans_Medium'
+}
+.newsOrangeDot{
+    width: 8px;
+    height: 8px;
+    border-radius: 50%;
+    background-color: #F7A524;
+}
+.readingTime{
+    font-size: 15px;
+    font-family: 'DM_Sans_Medium';
+    color: #757575;
+}
+.news23 .newsImage{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.news23 .newsImage img{
+    width: 110%;
+}
+.news23{
+    height: fit-content;
+    display: flex;
+    flex-direction: column;
+}
+.news2{
+    grid-column: 4/5;
+    grid-row: 1/2;
+}
+.news23Title{
+    font-size: 26px;
+    font-family: 'ER_Garamond_Medium';
+    font-weight: 500;
+    line-height: 120%;
+    margin-top: 8px;
+    margin-bottom: 20px;
+}
+.smallNewsContent{
+    display: flex;
+    flex-direction: column;
+}
+.news23Info{
+    display: flex;
+    flex-direction: column;
+    gap: 7px;
+}
+.news23line{
+    width: 100%;
+    height: 1px;
+    background: linear-gradient(to right, #ffffff00, #CACACA, #ffffff00);
+}
+
+.news3{
+    margin-top: -100px;
+    grid-column: 4/5;
+    grid-row: 2/3;
+    align-self: start;
 }
 
 
+.news45{
+    padding-top: 30px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+.mediumNewsContent{
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+}
+.news45Title{
+    font-size: 38px;
+    font-family: 'ER_Garamond_Medium';
+    font-weight: 500;
+    line-height: 120%;
+}
+.news45Description{
+    font-size: 18px;
+    line-height: 170%;
+    width: 90%;
+    color: #484848;
+    font-family: 'DM_Sans_Regular';
+}
+.news4{
+    grid-column: 1/3;
+    grid-row: 3/4;
+    width: 100%;
+}
+.news5{
+    grid-column: 3/5;
+    grid-row: 3/4;
+    width: 100%;
+}
 
 
 
@@ -1169,8 +1377,19 @@ body{
 }
 
 
+@media screen and (max-width: 1300px){
+    .gridFooterLinks{
+        width: 100%;
+        display: grid;
+        grid-template-columns: repeat(2,auto);
+        grid-template-rows: repeat(2,auto);
+        gap: 80px;
+    }
+}
 
-
+@media screen and (max-width: 1300px){
+    
+}
 
 @media screen and (max-width: 1070px){
     .menu{
@@ -1547,12 +1766,11 @@ body{
     filter: brightness(150%);
 }
 .gridFooterLinks{
-    display: grid;
-    gap: 70px;
     width: 100%;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(2,auto);
+    grid-template-rows: repeat(2,auto);
+    gap: 80px;
 }
 .footerGroup{
     display: flex;
@@ -1561,12 +1779,6 @@ body{
 }
 
 }
-
-
-
-
-
-
 
 @media screen and (max-width: 950px){
     .menuItems{
@@ -1945,17 +2157,11 @@ body{
     filter: brightness(150%);
 }
 .gridFooterLinks{
-    display: grid;
-    gap: 50px;
     width: 100%;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-}
-.footerGroup{
-    display: flex;
-    flex-direction: row;
-    gap: 50px;
+    display: grid;
+    grid-template-columns: repeat(2,auto);
+    grid-template-rows: repeat(2,auto);
+    gap: 80px;
 }
 .mainLink{
     font-size: 17px;
@@ -2017,6 +2223,20 @@ body{
     left: 0;
     position: absolute;
     background: linear-gradient(to right, #ffffff00, #CACACA, #ffffff00);
+}
+}
+
+@media screen and (max-width: 570px){
+    .gridFooterLinks{
+        width: 100%;
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+        grid-template-rows: repeat(4,auto);
+        gap: 80px;
+        padding-left: 5px;
+    }
+    .footerLinks{
+    border: none;
 }
 }
 
@@ -2488,23 +2708,21 @@ body{
     filter: brightness(150%);
 }
 .gridFooterLinks{
-    display: grid;
-    gap: 50px;
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-}
-.footerGroup{
-    display: flex;
-    flex-direction: row;
-    gap: 25px;
-}
+        width: 100%;
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+        grid-template-rows: repeat(4,auto);
+        gap: 40px;
+        padding-left: 5px;
+    }
 .mainLink{
     font-size: 15px;
 }
 .secondaryLink{
     font-size: 15px;
+}
+.footerLinks{
+    border: none;
 }
 
 
