--- a/my-first-react-app/src/index.css
+++ b/my-first-react-app/src/index.css
@@ -1388,7 +1388,109 @@ body{
 }
 
 @media screen and (max-width: 1300px){
-    
+.newsTopContainer{
+    display: flex;
+    flex-direction: column;
+    margin-top: 100px;
+    padding: 65px 100px 120px 100px;
+    gap: 28px;
+}
+.mainNewsBigGrid{
+    display: grid;
+    width: 100%;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: auto auto auto auto;
+    gap: 30px;
+}
+.newsImage{
+    overflow: hidden;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.news1{
+    padding-bottom: 30px;
+    grid-column: 1/4;
+    grid-row: 1/3;
+    border-right: 1px solid #CACACA;
+    border-bottom: 1px solid #CACACA;
+    padding-right: 30px;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+}
+.news1Content{
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    width: 80%;
+}
+.news1Title{
+    font-size: 50px;
+    font-family: 'ER_Garamond_Medium';
+    font-weight: 500;
+    line-height: 110%;
+}
+.news1Description{
+    font-size: 18px;
+    line-height: 170%;
+    width: 70%;
+    color: #484848;
+    font-family: 'DM_Sans_Regular';
+}
+.newsInlineInfo{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 16px;
+}
+.news23{
+    height: fit-content;
+    display: flex;
+    flex-direction: column;
+}
+.news2{
+    grid-column: 4/5;
+    grid-row: 1/2;
+}
+.smallNewsContent{
+    display: flex;
+    flex-direction: column;
+}
+.news23Info{
+    display: flex;
+    flex-direction: column;
+    gap: 7px;
+}
+.news3{
+    margin-top: -100px;
+    grid-column: 4/5;
+    grid-row: 2/3;
+    align-self: start;
+}
+.news45{
+    padding-top: 30px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+.mediumNewsContent{
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+}
+.news4{
+    grid-column: 1/3;
+    grid-row: 3/4;
+    width: 100%;
+}
+.news5{
+    grid-column: 3/5;
+    grid-row: 3/4;
+    width: 100%;
+}
+
 }
 
 @media screen and (max-width: 1070px){
