--- a/my-first-react-app/src/index.css
+++ b/my-first-react-app/src/index.css
@@ -1046,7 +1046,7 @@ body{
     height: 100%;
     object-fit: cover;
     object-position: center;
-    transition: all 0.2s;
+    transition: all 0.25s;
 }
 
 
@@ -1160,11 +1160,16 @@ body{
     font-weight: 500;
     font-family: "ER_Garamond_Medium";
 }
+.newsTopContent{
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
 .mainNewsBigGrid{
     display: grid;
     width: 100%;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: auto auto auto auto;
+    grid-template-rows: auto auto;
     gap: 30px;
 }
 .newsImage{
@@ -1220,6 +1225,7 @@ body{
     width: 70%;
     color: #484848;
     font-family: 'DM_Sans_Regular';
+    padding-left: 5px;
 }
 .newsInlineInfo{
     display: flex;
@@ -1282,19 +1288,22 @@ body{
     height: 1px;
     background: linear-gradient(to right, #ffffff00, #CACACA, #ffffff00);
 }
-
 .news3{
     margin-top: -100px;
     grid-column: 4/5;
     grid-row: 2/3;
     align-self: start;
 }
-
-
+.mediumNewsContainer{
+    display: flex;
+    flex-direction: row;
+    align-self: center;
+    gap: 30px;
+}
 .news45{
-    padding-top: 30px;
     display: flex;
     flex-direction: column;
+    flex: 1;
     gap: 20px;
 }
 .mediumNewsContent{
@@ -1314,24 +1323,8 @@ body{
     width: 90%;
     color: #484848;
     font-family: 'DM_Sans_Regular';
+    padding-left: 5px;
 }
-.news4{
-    grid-column: 1/3;
-    grid-row: 3/4;
-    width: 100%;
-}
-.news5{
-    grid-column: 3/5;
-    grid-row: 3/4;
-    width: 100%;
-}
-
-
-
-
-
-
-
 
 
 .showTestimony{
@@ -1376,40 +1369,28 @@ body{
     }
 }
 
-
-@media screen and (max-width: 1300px){
-    .gridFooterLinks{
-        width: 100%;
-        display: grid;
-        grid-template-columns: repeat(2,auto);
-        grid-template-rows: repeat(2,auto);
-        gap: 80px;
-    }
-}
-
-@media screen and (max-width: 1300px){
-.newsTopContainer{
+@media screen and (max-width: 1340px){
+    .newsTopContainer{
     display: flex;
     flex-direction: column;
     margin-top: 100px;
     padding: 65px 100px 120px 100px;
     gap: 28px;
 }
+.newsTopContent{
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
 .mainNewsBigGrid{
     display: grid;
     width: 100%;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: auto auto auto auto;
+    grid-template-rows: auto auto;
     gap: 30px;
 }
-.newsImage{
-    overflow: hidden;
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
 .news1{
+    height: 800px;
     padding-bottom: 30px;
     grid-column: 1/4;
     grid-row: 1/3;
@@ -1426,12 +1407,6 @@ body{
     gap: 16px;
     width: 80%;
 }
-.news1Title{
-    font-size: 50px;
-    font-family: 'ER_Garamond_Medium';
-    font-weight: 500;
-    line-height: 110%;
-}
 .news1Description{
     font-size: 18px;
     line-height: 170%;
@@ -1439,13 +1414,11 @@ body{
     color: #484848;
     font-family: 'DM_Sans_Regular';
 }
-.newsInlineInfo{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 16px;
+.news23 .newsImage img{
+    width: 110%;
 }
 .news23{
+    width: 280px;
     height: fit-content;
     display: flex;
     flex-direction: column;
@@ -1464,15 +1437,21 @@ body{
     gap: 7px;
 }
 .news3{
-    margin-top: -100px;
+    margin-top: -30px;
     grid-column: 4/5;
     grid-row: 2/3;
     align-self: start;
 }
+.mediumNewsContainer{
+    display: flex;
+    flex-direction: row;
+    align-self: center;
+    gap: 30px;
+}
 .news45{
-    padding-top: 30px;
     display: flex;
     flex-direction: column;
+    flex: 1;
     gap: 20px;
 }
 .mediumNewsContent{
@@ -1480,17 +1459,110 @@ body{
     flex-direction: column;
     gap: 16px;
 }
-.news4{
-    grid-column: 1/3;
-    grid-row: 3/4;
-    width: 100%;
-}
-.news5{
-    grid-column: 3/5;
-    grid-row: 3/4;
-    width: 100%;
 }
 
+@media screen and (max-width: 1300px){
+    .gridFooterLinks{
+        width: 100%;
+        display: grid;
+        grid-template-columns: repeat(2,auto);
+        grid-template-rows: repeat(2,auto);
+        gap: 80px;
+    }
+.newsTopContainer{
+    display: flex;
+    flex-direction: column;
+    margin-top: 100px;
+    padding: 65px 100px 120px 100px;
+    gap: 28px;
+}
+.newsTopContent{
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+}
+.mainNewsBigGrid{
+    display: grid;
+    width: 100%;
+    padding-bottom: 0px;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: auto auto 1fr;
+    gap: 30px;
+}
+.news1{
+    height: 800px;
+    padding-bottom: 30px;
+    grid-column: 1/3;
+    grid-row: 1/3;
+    border: none;
+    padding-right: 0px;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    border-bottom: 1px solid rgb(202, 202, 202);
+}
+.news1Content{
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    width: 80%;
+}
+.news1Description{
+    font-size: 18px;
+    line-height: 170%;
+    width: 70%;
+    color: #484848;
+    font-family: 'DM_Sans_Regular';
+}
+.news23 .newsImage img{
+    width: 110%;
+}
+.news23{
+    width: 100%;
+    height: fit-content;
+    display: flex;
+    flex-direction: column;
+}
+.news2{
+    grid-column: 1/2;
+    grid-row: 3/4;
+}
+.smallNewsContent{
+    display: flex;
+    flex-direction: column;
+}
+.news23Info{
+    display: flex;
+    flex-direction: column;
+    gap: 7px;
+}
+.news3{
+    margin-top: 0px;
+    grid-column: 2/3;
+    grid-row: 3/4;
+    align-self: start;
+}
+.mediumNewsContainer{
+    display: flex;
+    flex-direction: row;
+    align-self: center;
+    gap: 30px;
+}
+.news45{
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    gap: 10px;
+}
+.news45Title{
+    font-size: 30px;
+}
+.mediumNewsContent{
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    width: 95%;
+}
 }
 
 @media screen and (max-width: 1070px){
@@ -1878,6 +1950,107 @@ body{
     display: flex;
     flex-direction: row;
     gap: 95px;
+}
+
+    .gridFooterLinks{
+        width: 100%;
+        display: grid;
+        grid-template-columns: repeat(2,auto);
+        grid-template-rows: repeat(2,auto);
+        gap: 80px;
+    }
+.newsTopContainer{
+    display: flex;
+    flex-direction: column;
+    margin-top: 100px;
+    padding: 65px 70px 120px 70px;
+    gap: 28px;
+}
+.newsTopContent{
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+}
+.mainNewsBigGrid{
+    display: grid;
+    width: 100%;
+    padding-bottom: 0px;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: auto auto 1fr;
+    gap: 30px;
+}
+.news1{
+    height: 800px;
+    padding-bottom: 30px;
+    grid-column: 1/3;
+    grid-row: 1/3;
+    border: none;
+    padding-right: 0px;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    border-bottom: 1px solid rgb(202, 202, 202);
+}
+.news1Content{
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    width: 80%;
+}
+.news1Description{
+    font-size: 18px;
+    line-height: 170%;
+    width: 70%;
+    color: #484848;
+    font-family: 'DM_Sans_Regular';
+}
+.news23 .newsImage img{
+    width: 110%;
+}
+.news23{
+    width: 100%;
+    height: fit-content;
+    display: flex;
+    flex-direction: column;
+}
+.news2{
+    grid-column: 1/2;
+    grid-row: 3/4;
+}
+.smallNewsContent{
+    display: flex;
+    flex-direction: column;
+}
+.news23Info{
+    display: flex;
+    flex-direction: column;
+    gap: 7px;
+}
+.news3{
+    margin-top: 0px;
+    grid-column: 2/3;
+    grid-row: 3/4;
+    align-self: start;
+}
+.mediumNewsContainer{
+    display: flex;
+    flex-direction: row;
+    align-self: center;
+    gap: 30px;
+}
+.news45{
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+}
+.news45Title{
+    font-size: 26px;
+}
+.mediumNewsContent{
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    width: 97%;
 }
 
 }
